# Learn-Cpp

./: LICENSE  README.md
phase1_cpp_basics/: PHASE1_SUMMARY.md
phase1_cpp_basics/01_setup_toolchain/: README.md
phase1_cpp_basics/02_basics_syntax/: README.md
phase1_cpp_basics/03_functions_files/: README.md
phase1_cpp_basics/04_debugging/: README.md
phase1_cpp_basics/05_fundamental_types/: README.md
phase1_cpp_basics/06_constants_strings/: README.md
phase1_cpp_basics/07_operators/: README.md
phase1_cpp_basics/08_scope_linkage/: README.md
phase1_cpp_basics/09_control_flow/: README.md
phase1_cpp_basics/10_error_handling_basics/: README.md
phase1_cpp_basics/11_type_conversion/: README.md
phase1_cpp_basics/12_overloading_templates_intro/: README.md
phase1_cpp_basics/13_pointers_references/: README.md
phase1_cpp_basics/14_enums_structs/: README.md
phase2_libraries_tooling/: PHASE2_SUMMARY.md
phase2_libraries_tooling/01_intro_classes/: README.md
phase2_libraries_tooling/02_more_classes/: README.md
phase2_libraries_tooling/03_stdvector/: README.md
phase2_libraries_tooling/04_stdarray_cstyle/: README.md
phase2_libraries_tooling/05_iterators_algorithms/: README.md
phase2_libraries_tooling/06_dynamic_allocation/: README.md
phase2_libraries_tooling/mini_projects/mp05_multithreaded_resource_pool/: CMakeLists.txt  README.md
phase2_libraries_tooling/mini_projects/mp05_multithreaded_resource_pool/src/: main.cpp
phase3_advanced_capstones/: PHASE3_SUMMARY.md
resources/: books_and_courses.md  useful_links.md
(+146 files in other folders)
